# BitcoinTrader

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bitcointrader.conf  okcoin_error_reasons.txt  ticker.cpp
include/: bitcointrader.h  config.h  curl.h  exchange.h  exchange_data.h  exchange_handler.h  exchange_utils.h  log.h  mktdata.h  okcoin.h  okcoin_futs.h  okcoin_futs_handler.h  okcoin_spot.h  okcoin_spot_handler.h  strategies.h  trading.h  websocket.h
include/exchanges/: exchange.h  okcoin.h  okcoin_futs.h  okcoin_spot.h
include/handlers/: bitcointrader.h  exchange_data.h  exchange_handler.h  okcoin_futs_handler.h  okcoin_spot_handler.h
include/trading/: mktdata.h  signalstrategy.h  strategies.h  strategy.h  trading.h
include/user/: smacrossover.h
include/user/strategies/: bbands.h  smacrossover.h
include/utilities/: config.h  csv.h  curl.h  exchange_utils.h  log.h
include/websocket/: websocket.h
libs/websocketpp/websocketpp/transport/asio/security/: tls.hpp
src/: bitcointrader.cpp  curl.cpp  exchange_handler.cpp  exchange_utils.cpp  execution_algorithms.cpp  log.cpp  main.cpp  mktdata.cpp  okcoin.cpp  okcoin_futs.cpp  okcoin_futs_handler.cpp  okcoin_spot.cpp  okcoin_spot_handler.cpp  position_management.cpp  strategies.cpp  trading.cpp  websocket.cpp
src/exchanges/: okcoin.cpp  okcoin_futs.cpp  okcoin_spot.cpp
src/handlers/: bitcointrader.cpp  okcoin_futs_algorithms.cpp  okcoin_futs_handler.cpp  okcoin_futs_manage_positions.cpp  okcoin_spot_handler.cpp
src/trading/: mktdata.cpp  position_management.cpp  signalstrategy.cpp  strategies.cpp  strategy.cpp  trading.cpp
src/user/: smacrossover.cpp  user.cpp
src/user/strategies/: bbands.cpp  smacrossover.cpp
src/utilities/: csv.cpp  curl.cpp  exchange_utils.cpp  log.cpp
src/websocket/: websocket.cpp
